Update index hero links: rename intro button and add Getting Started link (#118)

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,8 +8,11 @@ hero:
       link: https://discord.gg/fqRBzQWVfK
       icon: external
       variant: primary
-    - text: Read the Introduction
+    - text: Intro to IS Central
       link: /introduction/
+      icon: right-arrow
+    - text: Getting Started in IS
+      link: /general-knowledge/getting-started/
       icon: right-arrow
 ---
 import { Card, CardGrid } from '@astrojs/starlight/components';
