is3 operators guide (#119)

--- a/src/content/docs/is3-mizuki/overview.mdx
+++ b/src/content/docs/is3-mizuki/overview.mdx
@@ -33,6 +33,19 @@ Welcome to the IS3 section! Here you'll find comprehensive guides and resources 
   </a>
 </div>
 
+<div class="guide-button-container">
+  <a href="/is3-mizuki/operator-overview/" class="guide-button">
+    <div class="button-image">
+      <img src="/guides/general-assets/operator-icons/Weedy.png" alt="Weedy" class="operator-avatar" loading="lazy" decoding="async" />
+    </div>
+    <div class="button-content">
+      <span class="button-title">Operator Guide</span>
+      <span class="button-subtitle">Written by: Bait</span>
+    </div>
+    <div class="button-arrow">→</div>
+  </a>
+</div>
+
 ## Available Guides
 
 <div class="guide-button-container">
